# cartopy

./: .appveyor.yml  .coveragerc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .stickler.yml  .travis.yml  .travis_no_output  CHANGES  CONTRIBUTING.md  INSTALL  LICENSE  MANIFEST.in  README.md  README.rst  build.out  collect_output  copyright.html  crs.py  environment.yml  example_rivers_works_with_bugfix.py  genindex.html  index.html  no_real_change.txt  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  versioneer.py  who_uses_cartopy.html
.circleci/: config.yml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml  zizmor.yml
.github/workflows/: ci-manifest.yml  ci-testing.yml  circleci.yml  linting.yml  release.yml
_modules/: index.html
_modules/cartopy/mpl_integration/: geoaxes.html
_sources/: copyright.txt  who_uses_cartopy.txt
_sources/building_from_source/: cartopy-0.4__on__ubuntu-12.04.txt
_sources/introductory_examples/: 01.great_circle.txt  index.txt
_sources/matplotlib/: advanced_plotting.txt  intro.txt
_sources/matplotlib/introductory_examples/: 01.great_circle.txt  02.polygon.txt  03.contours.txt  04.images.txt
_sources/projections/: table.txt
benchmarks/: asv.conf.json
benchmarks/cases/: __init__.py  geodesic.py  gridliner.py  mpl_redraw.py  project_linear.py
building_from_source/: cartopy-0.0__on__osx-10.8.html  cartopy-0.4__on__ubuntu-12.04.html  index.html
cartopy/: __init__.py  _crs.pxd  _trace.cpp  crs.py  feature.py  util.py
cartopy/data/netcdf/: HadISST1_SST_update.README.txt
cartopy/examples/: README.txt
cartopy/examples/lines_and_polygons/: README.txt  always_circular_stereo.py  effects_of_the_ellipse.py  global_map.py  rotated_pole.py
cartopy/examples/miscellanea/: logo.py  star_shaped_boundary.py  tube_stations.py
cartopy/examples/scalar_data/: README.txt  eyja_volcano.py  waves.py
cartopy/examples/vector_data/: README.txt  barbs.py  regridding_arrows.py  streamplot.py
cartopy/examples/web_services/: README.txt  wms.py
cartopy/geodesic/: _geodesic.pyx
cartopy/io/: __init__.py  img_nest.py  img_tiles.py  srtm.py
cartopy/mpl/: __init__.py  clip_path.py  geoaxes.py  ticker.py
cartopy/sphinxext/: summarise_package.py
cartopy/tests/: test_coastline.py  test_coding_standards.py  test_crs.py  test_img_nest.py  test_shapereader.py  test_vector_transform.py
cartopy/tests/crs/: __init__.py  test_albers_equal_area.py  test_lambert_azimuthal_equal_area.py  test_robinson.py
cartopy/tests/io/: test_ogc_clients.py  test_srtm.py
cartopy/tests/mpl/: test_axes.py  test_caching.py  test_contour.py  test_crs.py  test_img_transform.py  test_shapely_to_mpl.py  test_web_services.py
debian/: changelog  control  copyright
docs/: Makefile  add_noshow.py  doc-requirements.txt  make_examples_inits.py  make_projection.py
docs/scipy-sphinx-theme/: .gitignore  Makefile  README.rst  conf.py  index.rst
docs/source/: Makefile  cartopy.rst  citation.rst  conf.py  contribute.rst  contributors.rst  copyright.rst  developer_interfaces.rst  features.py  index.rst  installing.rst  matplotlib.rst  outline_of_cartopy.rst  whats_new.rst  who_uses_cartopy.rst
docs/source/_static/: copyright_license.csv  layout.css  linewidth.css  version_switch.js
docs/source/_templates/: layout.html
docs/source/api_reference/: index.rst
docs/source/building_from_source/: cartopy-0.0__on__osx-10.8.rst  index.rst
docs/source/cartopy/: crs.rst  geodesic.rst  trace.rst
docs/source/crs/: index.rst  projections.rst
docs/source/getting_started/: crs.rst  index.rst
examples/: README.txt
examples/gridlines_and_labels/: README.txt  gridliner.py  map_latitudes.py  scalebar_example.py  tick_labels.py
examples/lines_and_polygons/: README.txt  adaptive_resampling_example.py  always_circular_stereo.py  effects_of_the_ellipse.py  feature_creation.py  features.py  global_map.py  hurricane_katrina.py  nightshade.py  ocean_bathymetry.py  rotated_pole.py  tissot.py
examples/miscellanea/: README.txt  animate_surface.py  axes_grid_basic.py  cartopy_gridspec.py  eccentric_ellipse.py  favicon.py  logo.py  plot_bathymetry.ipynb  simpsons-monorail-map.py  star_shaped_boundary.py  tube_stations.py  un_flag.py  utm_all_zones.py  zebra_frame.py
examples/scalar_data/: README.txt  aurora_forecast.py  contour_labels.py  contour_transforms.py  extend_longitude_over_360.py  eyja_volcano.py  geometry_data.py  geostationary.py  ocean_bathymetry.py  raster_reprojections.py  waves.py  wrapping_global.py
examples/scalebar/: scalebar_usage_examples.py
examples/vector_data/: README.txt  arrows.py  barbs.py  regridding_arrows.py  streamplot.py
examples/web_services/: README.txt  image_tiles.py  reprojected_wmts.py  wms.py  wmts.py  wmts_time.py
introductory_examples/: 01-great_circle-1.py  01.great_circle.html  02-polygon-1.py  02.polygon.html  03-contours-1.py  03.contours.html  04-images-1.py  04.images.html  index.html
lib/cartopy/: __init__.py  _crs.pxd  _crs.pyx  _epsg.py  _proj4.pxd  _proj4.py  _trace.cpp  _trace.h  _version.py  crs.py  exceptions.py  feature.py  flakes_failure.py  geodesic.py  gshhs.py  img_transform.py  mosaic.py  peircequincuncial.py  proj4.pxi  test.py  trace.pyx  util.py  vector_transform.py
matplotlib/: advanced_plotting-1.py  advanced_plotting-2.py  advanced_plotting-3.py  advanced_plotting.html  geoaxes.html  intro-1.py  intro-2.py  intro-3.py  intro.html
matplotlib/introductory_examples/: 01.great_circle.html  02-polygon-1.py  02.polygon.html  03.contours.html  04-images-1.py  04.images.html  index.html
projections/: index.html  table-1.py  table-10.py  table-11.py  table-12.py  table-13.py  table-14.py  table-15.py  table-16.py  table-2.py  table-3.py  table-4.py  table-5.py  table-6.py  table-7.py  table-8.py  table-9.py  table.html
requirements/: default.txt  epsg.txt  ows.txt  plotting.txt  tests.txt
tools/: cartopy_feature_download.py  download.py  feature_download.py
(+404 files in other folders)
